fix: scrollbar of mobile

--- a/packages/core/src/tailwind.css
+++ b/packages/core/src/tailwind.css
@@ -38,17 +38,20 @@
     -webkit-font-smoothing: antialiased;
   }
 
-  ::-webkit-scrollbar {
-    width: 8px;
-    height: 8px;
-  }
+  /* 仅 PC 端显示自定义滚动条 */
+  @media (width >= 768px) {
+    ::-webkit-scrollbar {
+      width: 8px;
+      height: 8px;
+    }
 
-  ::-webkit-scrollbar-thumb {
-    background: #ccc;
-    border-radius: 2px;
-  }
+    ::-webkit-scrollbar-thumb {
+      background: #ccc;
+      border-radius: 2px;
+    }
 
-  ::-webkit-scrollbar-track {
-    background: transparent;
+    ::-webkit-scrollbar-track {
+      background: transparent;
+    }
   }
 }
